--- a/_config.yml
+++ b/_config.yml
@@ -56,21 +56,21 @@ plugins:
 
 author:
   name   : "Zachary Fruits"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "assets/images/IMG_5750.JPG"
   bio    : "My name is Zachary Fruits. On this webpage you can see some of the projects I have been associated with."
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
+#    - label: "Website"
+#      icon: "fas fa-fw fa-link"
+#      url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://x.com/fmanfruits"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/Fruitsy72"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/zachary_fruits/?next=%2F"
 
 footer:
   links:
