--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: fruitszachary@gmail.com
 description: My Projects
 twitter_username: fmanfruits
 github_username: Fruitsy72
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
