--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ author:
   bio    : "My name is Zachary Fruits. On this webpage you can see some of the projects I have been associated with."
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-linkedin"
-      url: "https://"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/zachary-fruits-2a0499207/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://x.com/fmanfruits"
