--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,6 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-favicon: "assets/images/Screenshot (4).png"
 title: ZF
 email: fruitszachary@gmail.com
 description: My Projects
@@ -54,6 +53,9 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-seo-tag
+
+favicon: "assets/images/Screenshot (4).png"
 
 author:
   name   : "Zachary Fruits"
