--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-favicon: "assets/images/Screenshot (4).png"
+favicon: "assets/images/Favicon.png"
 
 author:
   name   : "Zachary Fruits"
