--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
+  - _includes
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -60,7 +61,7 @@ favicon:
 author:
   name   : "Zachary Fruits"
   avatar : "assets/images/IMG_5750.JPG"
-  avatar_size: large
+  avatar_size: "large"
   bio    : "My name is Zachary Fruits. On this webpage you can see some of the projects I have been associated with."
   links:
     - label: "LinkedIn"
