--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   name   : "Zachary Fruits"
   avatar : "assets/images/IMG_5750.JPG"
   avatar_size: "large"
-  bio    : "My name is Zachary Fruits. On this webpage you can see some of the projects I have been associated with."
+  bio    : "On this webpage you can see some of the projects I have been associated with."
   links:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
