--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-seo-tag
 
 favicon:
   source: "assets/images/Favicon_800x800.png"
