--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ favicon:
 
 author:
   name   : "Zachary Fruits"
-  avatar : "assets/images/IMG_5750.JPG"
+  avatar : "/IMG_5750.JPG"
   bio    : "On this webpage you can see some of the projects I have been associated with."
   links:
     - label: "LinkedIn"
